--- a/themes/default/exam/create.html
+++ b/themes/default/exam/create.html
@@ -30,17 +30,17 @@
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
-
-                            <div class="modal-body">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" id="examtype" required/>
+                            <form>
+                                <div class="modal-body">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" id="examtype" required/>
+                                    </div>
                                 </div>
-                            </div>
 
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal"> Close </button>
-                                <button type="button" class="btn btn-primary"> Save changes </button>
-                            </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-primary"> Save changes </button>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -63,7 +63,6 @@
                             </div>
 
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal"> Close </button>
                                 <button type="button" class="btn btn-danger"> Save changes </button>
                             </div>
                         </div>
@@ -187,5 +186,6 @@
         </div>
     </div>
 
-{{ template.footer|raw }}
+    {{ template.footer|raw }}
+
 </body>
