--- a/themes/default/login/index.html
+++ b/themes/default/login/index.html
@@ -7,8 +7,9 @@
         <div class="row ">
 
             <div class="col-md-6 title">
-                <h1>School Management System</h1> <hr/>
-                <h2>David De Silva College &nbsp; Minuwangoda</h2>
+                <h1 class="login-title"> School Management System <h1>
+                <hr>
+                <h2 class="login-sub-title"> David De Silva College &nbsp; Minuwangoda </h2>
             </div>
 
             <div class="col-md-4 offset-1 loginform">
