--- a/themes/default/student/search.html
+++ b/themes/default/student/search.html
@@ -24,7 +24,7 @@
                                     <div class="col-2">
                                         <div class="form-group">
                                             <label for="addno">Admission Number</label>
-                                            <input type="number" class="form-control" name="addno"/>
+                                            <input type="number" class="form-control" name="addno" maxlength="6"/>
                                         </div>                                    
                                     </div>
                                     
