--- a/themes/default/user/add.html
+++ b/themes/default/user/add.html
@@ -63,8 +63,8 @@
                                         </div>
                                         <div class="row">
                                             <div class="button-group mx-auto">
-                                                <button type="button" id="btn-submit" class="btn btn-danger">CREATE</button>
-                                                <button type="reset" id="btn-clear" class="btn btn-secondary">CLEAR</button>
+                                                <button type="button" id="btn-submit" class="btn btn-danger">Create User</button>
+                                                <button type="reset" id="btn-clear" class="btn btn-secondary">Clear</button>
                                             </div>
                                         </div>
                                     </form>
