student add module completed

--- a/themes/default/student/add.html
+++ b/themes/default/student/add.html
@@ -307,7 +307,7 @@
 
                                             <div class="col-4">
                                                 <div class="form-group">
-                                                    <label for="g1inc">Annual Income</label>
+                                                    <label for="g1inc">Monthly Income</label>
                                                     <input type="number" class="form-control" id="g1inc"/>
                                                 </div>
                                             </div>
