--- a/themes/default/exam/create.html
+++ b/themes/default/exam/create.html
@@ -60,12 +60,17 @@
                             </div>
 
                             <div class="modal-body">
-                                body
+                                <ul class="list-group">
+                                    {% for exam_type in exam_types %}
+                                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                                        <div class="col-8">  {{ exam_type.name }} </div>
+                                        <div class="col-2"> <span class="badge badge-warning">edit</span> </div>
+                                        <div class="col-2"> <span class="badge badge-danger">delete</span> </div>
+                                    </li>
+                                    {% endfor %}
+                                </ul>
                             </div>
 
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-danger"> Save changes </button>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -117,8 +122,8 @@
 
                                 <div class="col-6">
                                     <div class="form-group">
-                                        <label for="instructions"> Instructions </label>
-                                        <textarea class="md-textarea form-control" rows="1" exam_ placeholder="type exam instructions here.."></textarea>
+                                        <label for="exam_instructions"> Instructions </label>
+                                        <textarea class="md-textarea form-control" id="exam_instructions" rows="1" placeholder="type exam instructions here.."></textarea>
                                     </div>
                                 </div>
 
@@ -159,7 +164,7 @@
                                 <div class="col-2">
                                     <div class="form-group">
                                         <label for="grade"> Grade </label>
-                                        <select class="form-control" id="grade">
+                                        <select class="form-control" id="exam_grade">
                                             <option selected disabled> - Select Grade - </option>
                                             {% for grade in grades %}
                                                 <option value="{{ grade.id }}"> {{ grade.name }} </option>
@@ -171,7 +176,7 @@
                                 <div class="col-2">
                                     <div class="form-group">
                                         <label for="subject"> Subject </label>
-                                        <select class="form-control" id="subject">
+                                        <select class="form-control" id="exam_subject">
                                             <option selected disabled> - Select Subject - </option>
                                             {% for subject in subjects %}
                                                 <option value="{{ subject.id }}"> {{ subject.name }} </option>
@@ -183,38 +188,41 @@
                                 <div class="col-2">
                                     <div class="form-group">
                                         <label for="date"> Date </label>
-                                        <input type="date" class="form-control" id="date"></select>
+                                        <input type="date" class="form-control" id="exam_date" min="{{ exam_min_date }}" max="{{ exam_max_date }}"></select>
                                     </div>
                                 </div>
 
                                 <div class="col-2">
                                     <div class="form-group">
                                         <label for="starttime"> Start time </label>
-                                        <div class="input-group date" id="starttimepicker" data-target-input="nearest">
+                                        <input type="time" id="exam_starttime" class="form-control"/>
+                                        <!-- <div class="input-group date" id="starttimepicker" data-target-input="nearest">
+                                            <input type="time" id="starttime" name="time" placeholder="hrs:mins" pattern="^([0-1]?[0-9]|2[0-4]):([0-5][0-9])(:[0-5][0-9])?$" class="form-control"/>
                                             <input type="text" id="starttime" class="form-control datetimepicker-input" data-target="#starttimepicker"/>
                                             <div class="input-group-append" data-target="#starttimepicker" data-toggle="datetimepicker">
                                                 <div class="input-group-text"><i class="la la-clock-o"></i></div>
                                             </div>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
 
                                 <div class="col-2">
                                     <div class="form-group">
                                         <label for="endtime"> End time </label>
-                                        <div class="input-group date" id="endtimepicker" data-target-input="nearest">
+                                        <input type="time" id="exam_endtime" class="form-control"/>
+                                        <!-- <div class="input-group date" id="endtimepicker" data-target-input="nearest">
                                             <input type="text" id="endtime" class="form-control datetimepicker-input" data-target="#endtimepicker"/>
                                             <div class="input-group-append" data-target="#endtimepicker" data-toggle="datetimepicker">
                                                 <div class="input-group-text"><i class="la la-clock-o"></i></div>
                                             </div>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
 
                                 <div class="col-9">
                                     <div class="form-group">
-                                        <label for="exam_instructions"> Instructions </label>
-                                        <textarea class="md-textarea form-control" rows="5" id="exam_instructions"></textarea>
+                                        <label for="subject_exam_instructions"> Instructions </label>
+                                        <textarea class="md-textarea form-control" rows="5" id="subject_exam_instructions"></textarea>
                                     </div>
                                 </div>
                             </div>
@@ -286,7 +294,7 @@
             formData.append('exam_type', $("#examtype").val())
             formData.append('exam_year', $("#examyear").val())
             formData.append('exam_venue', $("#venue").val())
-            formData.append('exam_instructions', $("#instructions").val())
+            formData.append('exam_instructions', $("#exam_instructions").val())
             
             // REQUEST
             $.ajax({
@@ -323,12 +331,12 @@
 
             // ADD EXAM SCHEDULE DATA
             formData.append('select_exam_name', $("#exam_name").val())
-            formData.append('exam_grade', $("#grade").val())
-            formData.append('exam_subject_name', $("#subject").val())
-            formData.append('exam_date', $("#date").val())
-            formData.append('exam_starttime', $("#starttime").val())
-            formData.append('exam_endtime', $("#endtime").val())
-            formData.append('exam_instructions', $("#exam_instructions").val())
+            formData.append('exam_grade', $("#exam_grade").val())
+            formData.append('exam_subject_name', $("#exam_subject").val())
+            formData.append('exam_date', $("#exam_date").val())
+            formData.append('exam_starttime', $("#exam_starttime").val())
+            formData.append('exam_endtime', $("#exam_endtime").val())
+            formData.append('subject_exam_instructions', $("#subject_exam_instructions").val())
 
             // REQUEST
             $.ajax({
@@ -341,7 +349,7 @@
                 success: (res) => {
                     
                     if ( res.status == 'success' ) {
-                        alertify.alert("Success", "Exam schedule updated successfully ... ").set('onok', function() {
+                        alertify.alert("Success", "Exam subject schedule created successfully ... ").set('onok', function() {
                             location.reload();
                         })
                     } else {
@@ -362,7 +370,7 @@
     <script type="text/javascript">
         $(function () {
             $('#starttimepicker').datetimepicker({
-                format: 'LT',
+                format: 'hh:mm',
                 icons: {
                     time: "la la-clock-o",
                     date: "la la-calendar",
