--- a/themes/default/common/header.html
+++ b/themes/default/common/header.html
@@ -17,7 +17,7 @@
 	<!-- ALERTIFY -->
 	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/alertify.min.css"/>
 	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/alertify.default.min.css"/>
-	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/multiple-select.css" />
+	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/bootstrap-select.min.css" />
 
 	<!-- CSS : LOCAL -->
 	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/core.css" />
