--- a/themes/default/student/add.html
+++ b/themes/default/student/add.html
@@ -295,6 +295,7 @@
                                                 <div class="form-group">
                                                     <label for="g1occu">Occupation</label>
                                                     <input type="text" class="form-control" id="g1occu"/>
+                                                    <small id="helpg1occu" class="form-text text-muted">Insert 'None' if Occupation isn't available</small>
                                                 </div>
                                             </div>
 
