--- a/themes/default/attendance/mark.html
+++ b/themes/default/attendance/mark.html
@@ -33,12 +33,18 @@
 
                                 <div class="form-group col-md-1 ml-auto">
                                     <label for="view">Select View</label>
-                                    <select class="form-control" id="view"></select>
+                                    <select class="form-control" id="view">
+                                        <option selected disabled> - Select - </option>
+                                        <option value="staff"> Staff </option>
+                                            {% for class in student_class %}
+                                            <option value="{{ class.id }}"> {{ class.grade.name }} - {{ class.name }} </option>
+                                            {% endfor %}
+                                    </select>
                                 </div>
 
                                 <div class="form-group">
                                     <label for="date">Select Date</label>
-                                    <input type="date" class="form-control" id="date" required/>
+                                    <input type="date" class="form-control" id="date"/>
                                 </div>
 
                             </div>
