--- a/themes/default/attendance/search.html
+++ b/themes/default/attendance/search.html
@@ -24,17 +24,41 @@
                                 <div class="form-row">
                                     <div class="form-group col-md-1 mr-auto">
                                         <label for="view">Select View</label>
-                                        <select class="form-control" id="view" required></select>
+                                        <select class="form-control" id="view">
+                                            <option selected disabled> - Select - </option>
+                                            <option value="staff"> Staff </option>
+                                            {% for class in student_class %}
+                                            <option value="{{ class.id }}"> {{ class.grade.name }} - {{ class.name }} </option>
+                                            {% endfor %}
+                                        </select>
                                     </div>
 
                                     <div class="form-group col-md-2 ml-auto">
                                         <label for="month">Select Month</label>
-                                        <select class="form-control" id="month" required></select>
+                                        <select class="form-control" id="month">
+                                            <option value="1"> January </option>
+                                            <option value="2"> February </option>
+                                            <option value="3"> March </option>
+                                            <option value="4"> April </option>
+                                            <option value="5"> May </option>
+                                            <option value="6"> June </option>
+                                            <option value="7"> July </option>
+                                            <option value="8"> August </option>
+                                            <option value="9"> September </option>
+                                            <option value="10"> October </option>
+                                            <option value="11"> November </option>
+                                            <option value="12"> December </option>
+                                        </select>
                                     </div>
 
                                     <div class="form-group col-md-1">
                                         <label for="year">Select Year</label>
-                                        <select class="form-control" id="year" required></select>
+                                        <select class="form-control" id="year">
+                                            <option selected disabled> - Select - </option>
+                                            <!-- {% for year in years %}
+                                                <option value="{{ year }}"> {{ year }} </option>
+                                            {% endfor %} -->
+                                        </select>
                                     </div>
 
                                 </div>
@@ -85,27 +109,36 @@
 
                                     <div class="form-group col-md-2">
                                         <label for="addno">Admission / Emp ID</label>
-                                        <input type="number" class="form-control" id="addno" required/>
+                                        <input type="number" class="form-control" id="addno"/>
                                     </div>
 
                                     <div class="form-group col-md-1">
                                         <label for="view">Select View</label>
-                                        <select class="form-control" id="view" required></select>
+                                        <select class="form-control" id="view" >
+                                                <option selected disabled> - Select - </option>
+                                                <option value="staff"> Staff </option>
+                                                {% for class in student_class %}
+                                                <option value="{{ class.id }}"> {{ class.grade.name }} - {{ class.name }} </option>
+                                                {% endfor %}
+                                        </select>
                                     </div>
 
                                     <div class="form-group col-md-1 mr-auto">
                                         <label for="status">Select Status</label>
-                                        <select class="form-control" id="status" required></select>
+                                        <select class="form-control" id="status">
+                                            <option value="present"> Present </option>
+                                            <option value="absent"> Absent </option>
+                                        </select>
                                     </div>
 
                                     <div class="form-group mr-2">
                                         <label for="datefrom">From</label>
-                                        <input type="date" class="form-control" id="datefrom" required/>
+                                        <input type="date" class="form-control" id="datefrom"/>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="dateto">To</label>
-                                        <input type="date" class="form-control" id="dateto" required/>
+                                        <input type="date" class="form-control" id="dateto"/>
                                     </div>
 
                                 </div>
