--- a/themes/default/exam/search.html
+++ b/themes/default/exam/search.html
@@ -20,28 +20,48 @@
                         <div class="form-row mt-4">
 
                             <div class="form-group col-md-1">
-                                <label for="examschyear"> Year </label>
-                                <select class="form-control" id="examschyear" required></select>
+                                <label for="exam_year"> Year </label>
+                                <select class="form-control" id="exam_year">
+                                    <option selected disabled> - Select - </option>
+                                    {% for year in years %}
+                                        <option value="{{ year }}"> {{ year }} </option>
+                                    {% endfor %}
+                                </select>
                             </div>
 
                             <div class="form-group col-md-2">
-                                <label for="exam"> Select Exam </label>
-                                <select class="form-control" id="exam" required></select>
+                                <label for="exam_name"> Select Exam </label>
+                                <select class="form-control" id="exam_name">
+                                    <option selected disabled> - Select Exam - </option>
+                                    {% for exam in exams %}
+                                        <option value="{{ exam.id }}"> {{ exam.type.name }} - {{ exam.year }} </option>
+                                    {% endfor %}
+                                </select>
                             </div>
 
                             <div class="form-group col-md-1 ml-auto">
-                                <label for="grade"> Grade </label>
-                                <select class="form-control" id="grade" required></select>
+                                <label for="exam_grade"> Grade </label>
+                                <select class="form-control" id="exam_grade">
+                                    <option selected disabled> - Select - </option>
+                                    {% for grade in grades %}
+                                        <option value="{{ grade.id }}"> {{ grade.name }} </option>
+                                    {% endfor %}
+                                </select>
                             </div>
 
                             <div class="form-group col-md-1">
-                                <label for="subject"> Subject </label>
-                                <select class="form-control" id="subject" required></select>
+                                <label for="exam_subject"> Subject </label>
+                                <select class="form-control" id="exam_subject">
+                                    <option selected disabled> - Select - </option>
+                                    {% for subject in subjects %}
+                                        <option value="{{ subject.id }}"> {{ subject.name }} </option>
+                                    {% endfor %}
+                                </select>
                             </div>
 
                             <div class="form-group">
-                                <label for="date"> Date </label>
-                                <input type="date" class="form-control" id="date" required></select>
+                                <label for="exam_date"> Date </label>
+                                <input type="date" class="form-control" id="exam_date"></select>
                             </div>
 
                         </div>
@@ -54,7 +74,7 @@
 
                     </form>
 
-                    <h4 class="page-title"> "Exam name" Exam Schedule</h4>
+                    <h4 class="page-title"> Exam Schedule</h4>
 
                 </div>
             </div>
