--- a/themes/default/parents/add.html
+++ b/themes/default/parents/add.html
@@ -177,6 +177,7 @@
                                                     <div class="form-group">
                                                         <label for="g2occu">Occupation</label>
                                                         <input type="text" class="form-control" id="g2occu"/>
+                                                        <small id="helpg2occu" class="form-text text-muted">Insert 'None' if Occupation isn't available</small>
                                                     </div>
                                                 </div>
 
