--- a/themes/default/timetable/search.html
+++ b/themes/default/timetable/search.html
@@ -23,8 +23,13 @@
 
                             <div class="form-row mr-2">
                                 <div class="form-group col-md-1 ml-auto p-0">
-                                    <label for="class"> Select Class </label>
-                                    <select class="form-control" id="class" required></select>
+                                    <label for="timetable_class"> Select Class </label>
+                                    <select class="form-control" id="timetable_class">
+                                        <option selected disabled> - Select - </option>
+                                        {% for class in classes %}
+                                        <option value="{{ class.id }}"> {{ class.grade.name }} - {{ class.name }} </option>
+                                        {% endfor %}
+                                    </select>
                                 </div>
                             </div>
 
@@ -97,7 +102,12 @@
 
                                 <div class="form-group col-md-1">
                                     <label for="staffclass">Class</label>
-                                    <select class="form-control" id="staffclass"></select>
+                                    <select class="form-control" id="staffclass">
+                                        <option selected disabled> - Select - </option>
+                                        {% for staff_class in classes %}
+                                        <option value="{{ staff_class.id }}"> {{ staff_class.grade.name }} - {{ staff_class.name }} </option>
+                                        {% endfor %}
+                                    </select>
                                 </div>
 
                                 <div class="form-group col-md-1">
@@ -112,7 +122,16 @@
 
                                 <div class="form-group col-md-1 mr-1 ml-auto">
                                     <label for="day"> Day </label>
-                                    <select class="form-control" id="day"></select>
+                                    <select class="form-control" id="day">
+                                        <option selected disabled> - Select - </option>
+                                        <option value="Monday">Monday</option>
+                                        <option value="Tuesday">Tuesday</option>
+                                        <option value="Wednesday">Wednesday</option>
+                                        <option value="Thursday">Thursday</option>
+                                        <option value="Friday">Friday</option>
+                                        <option value="Saturday">Saturday</option>
+                                        <option value="Sunday">Sunday</option>
+                                    </select>
                                 </div>
 
                                 <div class="form-group">
@@ -192,7 +211,17 @@
 
                                 <div class="form-group col-md-1 ml-auto mr-1">
                                     <label for="period"> Period </label>
-                                    <select class="form-control" id="period" required></select>
+                                    <select class="form-control" id="period">
+                                        <option selected disabled> - Select - </option>
+                                        <option value="1">Period 1</option>
+                                        <option value="2">Period 2</option>
+                                        <option value="3">Period 3</option>
+                                        <option value="4">Period 4</option>
+                                        <option value="5">Period 5</option>
+                                        <option value="6">Period 6</option>
+                                        <option value="7">Period 7</option>
+                                        <option value="8">Period 8</option>
+                                    </select>
                                 </div>
 
                                 <div class="form-group">
